# Computational_Codes

./: README.md
comp-phys-f21/: README.md
comp-phys-f21/examples/02_Computing/Computing/: CMakeLists.txt  testComputing.cpp
comp-phys-f21/examples/02_Plotting/Plotting/: CMakeLists.txt  plot.cpp
comp-phys-f21/examples/02_Plotting/Plotting/cmake_related/: CMakeCache.txt  Makefile  cmake_install.cmake  plot
comp-phys-f21/examples/03_Numerics/Numerics/: CMakeLists.txt  QuadSolve.C  testNumerics.cpp  testNumericsUniversal.cpp
comp-phys-f21/examples/04_ODE/ODE/: CMakeLists.txt  YvsX.C  testODE.cpp
comp-phys-f21/examples/05_Integration/Integration/: CMakeLists.txt  DvsN.C  Resolution.C  testQuadrature.cpp
comp-phys-f21/examples/06_Random/Random/: CMakeLists.txt  autocor.C  filling.C  nonUnifDev.C  testRandom.cpp  uniformity.C
comp-phys-f21/examples/07_Statistics/Statistics/: CMakeLists.txt  chi2prob.cpp
comp-phys-f21/setup/: .bash_aliases  .bashrc_test  .tmux.conf  .vimrc  bashrc_snippet.sh  init.el
exercises/Comp_GroupExer_2/: CMakeLists.txt  README.md  data.txt  load.out  loadData.cpp  loadData_new.cpp  load_new.out  makeplots.cpp  makeplots_final.cpp
exercises/Comp_Group_1/: Final  README.md  Sdown.cpp  series_Final.cpp  series_upp.cpp
exercises/Comp_Group_3/: CMakeLists.txt  README.md  Trapezoid.cpp  cpTrap.cpp  trapezoid_final.cpp
exercises/Comp_Group_4/: CMakeLists.txt  README.md  Random.cpp  random_final.cpp
exercises/Comp_Set_1/: README.md  ]  comp_set1.hpp  prob_1.C  prob_2.C  prob_2d.C
exercises/Comp_Set_2/: CMakeLists.txt  README.md  comp_set2.hpp  prob_1_gauss.cpp  prob_1_simp.C  prob_1_trans.C
exercises/Comp_Set_2/Prob2/: CMakeLists.txt  prob_2.cpp
exercises/Comp_Set_3/: CMakeLists.txt  README.md  comp_set3.hpp  work_1.cpp
exercises/Comp_Set_3/Prob2/: CMakeLists.txt  work_2.cpp
exercises/Comp_Set_3/Prob2/partE/: CMakeLists.txt  work_2e.cpp
exercises/Comp_Set_3/build_1/: CMakeCache.txt  Makefile  cmake_install.cmake  out.root  part_a.root  work_1
